; ModuleID = '/home/carl/AnghaBench/tmux/extr_names.c_name_time_expired.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_names.c_name_time_expired.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window = type { i32 }
%struct.timeval = type { i64, i64 }

@NAME_INTERVAL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.window*, %struct.timeval*)* @name_time_expired to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @name_time_expired(%struct.window* %0, %struct.timeval* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.window*, align 8
  %5 = alloca %struct.timeval*, align 8
  %6 = alloca %struct.timeval, align 8
  store %struct.window* %0, %struct.window** %4, align 8
  store %struct.timeval* %1, %struct.timeval** %5, align 8
  %7 = load %struct.timeval*, %struct.timeval** %5, align 8
  %8 = load %struct.window*, %struct.window** %4, align 8
  %9 = getelementptr inbounds %struct.window, %struct.window* %8, i32 0, i32 0
  %10 = call i32 @timersub(%struct.timeval* %7, i32* %9, %struct.timeval* %6)
  %11 = getelementptr inbounds %struct.timeval, %struct.timeval* %6, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %19, label %14

14:                                               ; preds = %2
  %15 = getelementptr inbounds %struct.timeval, %struct.timeval* %6, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @NAME_INTERVAL, align 8
  %18 = icmp sgt i64 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %14, %2
  store i32 0, i32* %3, align 4
  br label %26

20:                                               ; preds = %14
  %21 = load i64, i64* @NAME_INTERVAL, align 8
  %22 = getelementptr inbounds %struct.timeval, %struct.timeval* %6, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = sub nsw i64 %21, %23
  %25 = trunc i64 %24 to i32
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %20, %19
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @timersub(%struct.timeval*, i32*, %struct.timeval*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
